mfc popup video issue on mobile and mobile overflow-x

--- a/demo/MBMDT_Website_HTML/public/css/styles.css
+++ b/demo/MBMDT_Website_HTML/public/css/styles.css
@@ -2695,6 +2695,8 @@ body[data-aos-easing="ease-in-out"] [data-aos], [data-aos][data-aos][data-aos-ea
 /*Custom styling*/
 b, strong { font-weight: 600; }
 
+main { overflow-x: hidden; }
+
 a:hover, .anchor-link:hover { text-shadow: 0 0.1rem 0px rgba(65, 64, 66, 0.5); }
 
 .button { cursor: pointer; text-align: center; text-decoration: none; line-height: 1; position: relative; }
